--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div class="main-container">
+      <div class="message">
+        <div class="heading"></div>
+        <div class="subheading"></div>
+        <div class="description"></div>
+      </div>
+      <div class="subscription">
+        <div class="heading"></div>
+        <div class="pricing"></div>
+        <div class="description"></div>
+        <button></button>
+      </div>
+      <div class="reason">
+        <div class="heading"></div>
+        <div class="subscription"></div>
+      </div>
+    </div>
+
     <!-- Join our community
 
   30-day, hassle-free money back guarantee
