feat: message grid area styling complete! (be wary of required flex configurations)

--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
   <body>
     <div class="main-container">
       <div class="message">
-        <div class="heading"></div>
-        <div class="subheading"></div>
-        <div class="description"></div>
+        <div class="text-box">
+          <div class="heading">Join our community</div>
+          <div class="subheading">30-day, hassle-free money back guarantee</div>
+          <div class="description">
+            Gain access to our full library of tutorials along with expert code
+            reviews. Perfect for any developers who are serious about honing
+            their skills.
+          </div>
+        </div>
       </div>
       <div class="subscription">
         <div class="heading"></div>
@@ -42,13 +48,7 @@
       </div>
     </div>
 
-    <!-- Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
+    <!-- 
   Monthly Subscription
 
   &dollar;29 per month
