feat: subscription text box content styling

--- a/index.html
+++ b/index.html
@@ -37,10 +37,18 @@
         </div>
       </div>
       <div class="subscription">
-        <div class="heading"></div>
-        <div class="pricing"></div>
-        <div class="description"></div>
-        <button></button>
+        <div class="text-and-button-box">
+          <div class="text-box">
+            <div class="heading">Monthly Subscription</div>
+            <div class="pricing">
+              <span>&dollar;29</span><span> per month </span>
+            </div>
+            <div class="description">
+              Full access for less than &dollar;1 a day
+            </div>
+          </div>
+          <div class="button">Sign Up</div>
+        </div>
       </div>
       <div class="reason">
         <div class="heading"></div>
@@ -49,13 +57,13 @@
     </div>
 
     <!-- 
-  Monthly Subscription
 
-  &dollar;29 per month
 
-  Full access for less than &dollar;1 a day
 
-  Sign Up
+
+ 
+
+
 
   Why Us
 
