--- a/index.html
+++ b/index.html
@@ -51,28 +51,19 @@
         </div>
       </div>
       <div class="reason">
-        <div class="heading"></div>
-        <div class="subscription"></div>
+        <div class="text-content">
+          <div class="heading">Why Us</div>
+          <div class="description">
+            Tutorials by industry experts<br />
+            Peer &amp; expert code review<br />
+            Coding exercises<br />
+            Access to our GitHub repos<br />
+            Community forum<br />
+            Flashcard decks<br />
+            New videos every week
+          </div>
+        </div>
       </div>
     </div>
-
-    <!-- 
-
-
-
-
- 
-
-
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week -->
   </body>
 </html>
